# Python-Hello-Series

./: README.md  classy.py  listy.py  loopy.py  main.py  menuy.py  numby.py  pyproject.toml  stringy.py
mody/: advy.py
wipy/: biny.py  funcy.py  mapit.py  menuyc1.py  prefuncy.py  randomy.py  termy.py
wipy/old/: chars.py  main.py  menuy.py  menuyc.py  newmenuy.py  oldmain.py  omain.py
